# JobScrapper

./: .dockerignore  Dockerfile  fly.toml  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
jobspy/: util.py
